--- a/projeto/site.css
+++ b/projeto/site.css
@@ -1,10 +1,10 @@
 body {
-    font-family: "Times New Roman", serif;
+    font-family: 'Indie Flower', cursive,"Crimson Text","Times New Roman", serif;
     background-color: #F2FFFC;
 }
 
 h1, h2 {
-    font-family: "Arial", sans-serif;
+    font-family: "Open Sans Condensed","Arial", sans-serif;
 }
 
 h1 {
