--- a/projeto/site.css
+++ b/projeto/site.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Indie Flower', cursive,"Crimson Text","Times New Roman", serif;
+    font-family: "Crimson Text","Times New Roman", serif;
     background-color: #F2FFFC;
 }
 
@@ -7,7 +7,7 @@ h1, h2 {
     font-family: "Open Sans Condensed","Arial", sans-serif;
 }
 
-h1 {
+main h1 {
     text-align: center;
     background-color: #851944;
     color: #FFF;
