--- a/projeto/site.css
+++ b/projeto/site.css
@@ -1,18 +1,46 @@
 body {
-    font-family: "Crimson Text","Times New Roman", serif;
-    background-color: #F2FFFC;
+  font-family: "Crimson Text", "Times New Roman", serif;
+  background-color: #F2FFFC;
 }
 
 h1, h2 {
-    font-family: "Open Sans Condensed","Arial", sans-serif;
+  font-family: "Open Sans Condensed", "Arial", sans-serif;
 }
 
 main h1 {
-    text-align: center;
-    background-color: #851944;
-    color: #FFF;
+  text-align: center;
+  background-color: #851944;
+  color: #FFF;
 }
 
 p {
-    text-align: justify;
+  text-align: justify;
+}
+
+blockquote {
+  background-color: #D9E5E3;
+}
+
+aside {
+  background-color: #3C1D3D;
+  color: #F2FFFC
+}
+
+footer {
+  background-color: #000;
+  color: #F2FFFC
+}
+
+nav a {
+  color: #F2FFFC;
+}
+
+main a {
+  color: #851944;
+  font-family: "Open Sans Condensed", "Times New Roman", serif;
+}
+
+aside a {
+  color: inherit;
+  font-family: "Open Sans Condensed", sans-serif;
 }
