Aula 5 - Aprimorando Layout - Melhorando Layout

--- a/projeto/site.css
+++ b/projeto/site.css
@@ -11,6 +11,8 @@ main h1 {
   text-align: center;
   background-color: #851944;
   color: #FFF;
+  padding: 20px;
+  margin: 0px;
 }
 
 p {
@@ -19,6 +21,11 @@ p {
 
 blockquote {
   background-color: #D9E5E3;
+  padding: 16px;
+  border: 10px solid #C2CCCA;
+  width: 250px;
+  margin: 0px;
+  box-sizing:border-box;
 }
 
 aside {
