--- a/projeto/site.css
+++ b/projeto/site.css
@@ -11,7 +11,7 @@ main h1 {
   text-align: center;
   background-color: #851944;
   color: #FFF;
-  padding: 20px;
+  padding: 25px;
   margin: 0px;
 }
 
@@ -21,7 +21,6 @@ p {
 
 blockquote {
   background-color: #D9E5E3;
-  padding: 16px;
   border: 10px solid #C2CCCA;
   width: 250px;
   margin: 0px;
@@ -30,12 +29,12 @@ blockquote {
 
 aside {
   background-color: #3C1D3D;
-  color: #F2FFFC
+  color: #F2FFFC;
 }
 
 footer {
   background-color: #000;
-  color: #F2FFFC
+  color: #F2FFFC;
 }
 
 nav a {
@@ -50,4 +49,9 @@ main a {
 aside a {
   color: inherit;
   font-family: "Open Sans Condensed", sans-serif;
+}
+
+
+blockquote, aside, footer {
+    padding: 20px;
 }
