--- a/projeto/site.css
+++ b/projeto/site.css
@@ -13,6 +13,7 @@ main h1 {
   color: #FFF;
   padding: 25px;
   margin: 0px;
+  border-bottom: 10px solid black;
 }
 
 p {
@@ -59,4 +60,8 @@ div {
   width: 720px;
   margin-left: auto;
   margin-right: auto;
+}
+
+body {
+    line-height: 1.5;
 }
