Aula 9 - Nem tudo é o que parece - Nem tudo é o que parece

--- a/projeto/site.css
+++ b/projeto/site.css
@@ -16,6 +16,7 @@ h1, h2 {
 	padding: 25px;
 	border-bottom: 10px solid black;
 	font-size: 60px;
+  text-transform: uppercase;
 }
 
 p {
@@ -95,4 +96,23 @@ em {
 	font-size: 24px;
 	text-align: center;
 	background-color: #E6E7E8;
+}
+
+.icones-redes-sociais a{
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  text-indent: -999999px;
+}
+
+.github{
+  background-image: url(github.png);
+}
+
+.twitter{
+  background-image: url(twitter.png);
+}
+
+.linkedin{
+  background-image: url(linkedin.png);
 }
