--- a/projeto/site.css
+++ b/projeto/site.css
@@ -1,143 +1,150 @@
 body {
-	font-family: "Crimson Text", "Times New Roman", serif;
-	background-color: #F2FFFC;
-	font-size: 120%;
-	line-height: 1.5;
+  font-family: "Crimson Text", "Times New Roman", serif;
+  background-color: #F2FFFC;
+  font-size: 120%;
+  line-height: 1.5;
 }
 
 h1, h2 {
-	font-family: "Open Sans Condensed", "Arial", sans-serif;
+  font-family: "Open Sans Condensed", "Arial", sans-serif;
   clear: both;
 }
 
 .titulo-principal {
-	text-align: center;
-	background-color: #851944;
-	color: #FFF;
-	padding: 25px;
-	border-bottom: 10px solid black;
-	font-size: 60px;
+  text-align: center;
+  background-color: #851944;
+  color: #FFF;
+  padding: 25px;
+  border-bottom: 10px solid black;
+  font-size: 60px;
   text-transform: uppercase;
 }
 
 p {
-	text-align: justify;
-	margin: 20px 0;
+  text-align: justify;
+  margin: 20px 0;
 }
 
 .citacao-bio {
-	background-color: #D9E5E3;
-	border: 10px solid #C2CCCA;
-	width: 250px;
-	box-sizing: border-box;
-	margin: 20px 40px;
+  background-color: #D9E5E3;
+  border: 10px solid #C2CCCA;
+  width: 250px;
+  box-sizing: border-box;
+  margin: 20px 40px;
 }
 
 .navegacao-site {
-	text-align: center;
-	background-color: #3C1D3D;
-	color: #F2FFFC;
+  text-align: center;
+  background-color: #3C1D3D;
+  color: #F2FFFC;
   clear: right;
   box-sizing: border-box;
 }
 
 .rodape-pagina {
-	background-color: #000;
-	color: #F2FFFC;
+  background-color: #000;
+  color: #F2FFFC;
   clear: both;
 }
 
 main a {
-	color: #851944;
+  color: #851944;
 }
 
 .navegacao-site a {
-	color: inherit;
-	font-family: "Open Sans Condensed", sans-serif;
+  color: inherit;
+  font-family: "Open Sans Condensed", sans-serif;
 }
 
 .citacao-bio, .navegacao-site, .rodape-pagina {
-    padding: 20px;
+  padding: 20px;
 }
 
 .container {
-	width: 720px;
-	margin: auto;
-	padding: 30px 0;
+  width: 720px;
+  margin: auto;
+  padding: 30px 0;
 }
 
 .navegacao-site h1 {
-	font-size: 30px;
-	margin-bottom: 25px;
+  font-size: 30px;
+  margin-bottom: 25px;
 }
 
 strong {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 em {
-	font-style: italic;
+  font-style: italic;
 }
 
 .subtitulo-texto {
-	font-size: 30px;
+  font-size: 30px;
 }
 
 .icones-redes-sociais li {
-	display: inline-block;
+  display: inline-block;
 }
 
 .artigo {
-	padding-bottom: 30px;
-	border-bottom: 1px solid #ccc;
-	margin-bottom: 20px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 20px;
 }
 
 .leia-mais {
-	padding: 8px;
-	margin: 16px;
-	display: block;
-	font-size: 24px;
-	text-align: center;
-	background-color: #E6E7E8;
+  padding: 8px;
+  margin: 16px;
+  display: block;
+  font-size: 24px;
+  text-align: center;
+  background-color: #E6E7E8;
 }
 
-.icones-redes-sociais a{
+.icones-redes-sociais a {
   width: 40px;
   height: 40px;
   display: inline-block;
   text-indent: -999999px;
 }
 
-.github{
+.github {
   background-image: url(github.png);
 }
 
-.twitter{
+.twitter {
   background-image: url(twitter.png);
 }
 
-.linkedin{
+.linkedin {
   background-image: url(linkedin.png);
 }
-.barra-navegacao{
+
+.barra-navegacao {
   text-transform: lowercase;
 }
 
-.fiat{
+.fiat {
   float: right;
 }
 
-.petrobras{
+.petrobras {
   float: left;
 }
 
-aside, img{
+aside, img {
   float: right;
   width: 15%;
 }
 
-main{
+main {
   float: left;
   width: 85%;
+}
+
+cite {
+  font-style: italic;
+  float: right;
+  display: block;
 }
