Aula 11 - Elementos onde queremos - Elementos onde queremos

--- a/projeto/site.css
+++ b/projeto/site.css
@@ -36,12 +36,18 @@ p {
 	text-align: center;
 	background-color: #3C1D3D;
 	color: #F2FFFC;
+  clear: right;
+  position: relative;
+  top: 310px
 }
 
 .rodape-pagina {
 	background-color: #000;
 	color: #F2FFFC;
 	clear: both;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
 }
 
 main a {
@@ -60,7 +66,8 @@ main a {
 .container {
 	width: 720px;
 	margin: auto;
-	padding: 30px 0;
+	padding: 40px 0;
+  padding-bottom: 80px;
 }
 
 .navegacao-site h1 {
@@ -138,7 +145,6 @@ main {
 
 .minha-foto, .navegacao-site {
 	float: right;
-	width: 15%;
 	box-sizing: border-box;
 	border-left: 10px solid black;
 	border-bottom: 10px solid black;
@@ -147,4 +153,10 @@ main {
 cite {
 	font-style: italic;
 	float: right;
+}
+
+.minha-foto{
+  position: absolute;
+  top: 0px;
+  right: 0px;
 }
